RESOLVED FIXED109859
Intrinsic and preferred widths on replaced elements are wrong in many cases
https://bugs.webkit.org/show_bug.cgi?id=109859
Summary Intrinsic and preferred widths on replaced elements are wrong in many cases
Ojan Vafai
Reported 2013-02-14 14:00:02 PST
Intrinsic and preferred widths on replaced elements are wrong in many cases
Attachments
Patch (207.76 KB, patch)
2013-02-14 14:20 PST, Ojan Vafai
no flags
Patch (206.70 KB, patch)
2013-02-14 14:43 PST, Ojan Vafai
no flags
Patch (206.71 KB, patch)
2013-02-14 15:03 PST, Ojan Vafai
no flags
Ojan Vafai
Comment 1 2013-02-14 14:20:13 PST
Ojan Vafai
Comment 2 2013-02-14 14:43:11 PST
Levi Weintraub
Comment 3 2013-02-14 14:45:01 PST
Comment on attachment 188432 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=188432&action=review > Source/WebCore/rendering/RenderReplaced.cpp:456 > + RenderStyle* styleToUse = style(); > + if (style()->logicalWidth().isPercent() || style()->logicalMaxWidth().isPercent() || hasRelativeIntrinsicLogicalWidth()) Why aren't you using the styleToUse you just created?
Ojan Vafai
Comment 4 2013-02-14 15:03:14 PST
Ojan Vafai
Comment 5 2013-02-14 15:03:29 PST
(In reply to comment #3) > (From update of attachment 188432 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=188432&action=review > > > Source/WebCore/rendering/RenderReplaced.cpp:456 > > + RenderStyle* styleToUse = style(); > > + if (style()->logicalWidth().isPercent() || style()->logicalMaxWidth().isPercent() || hasRelativeIntrinsicLogicalWidth()) > > Why aren't you using the styleToUse you just created? Whoops. Fixed.
Levi Weintraub
Comment 6 2013-02-14 15:07:08 PST
Comment on attachment 188436 [details] Patch Awesome fix :)
WebKit Review Bot
Comment 7 2013-02-14 15:59:44 PST
Comment on attachment 188436 [details] Patch Clearing flags on attachment: 188436 Committed r142931: <http://trac.webkit.org/changeset/142931>
WebKit Review Bot
Comment 8 2013-02-14 15:59:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.