Intrinsic and preferred widths on replaced elements are wrong in many cases https://bugs.webkit.org/show_bug.cgi?id=109859

Reviewed by Levi Weintraub.

Source/WebCore:

Test: fast/replaced/preferred-widths.html

* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computeIntrinsicLogicalWidths):
Separate out computing the intrinsic widths. Eventually,
we should be able to share computePreferredLogicalWidth implementations
for all replaced elements and form controls since only the intrinsic width
changes.

(WebCore::RenderReplaced::computePreferredLogicalWidths):
-Apply min-width and max-width constraints and then add borderAndPaddingLogicalWidth
at the end to make sure it's always applied. This matches all our other
computePreferredLogicalWidths override and makes use match Gecko's/Opera's rendering.
-Only set the minPreferredLogicalWidth to 0 if the width or max-width is a percent value.
Doing it for height values and for min-width doesn't make any sense and doesn't
match other browsers. Doing this for max-width still doesn't match other browsers,
but it sounds like Gecko at least would like to change that.

* rendering/RenderReplaced.h:
(WebCore::RenderReplaced::hasRelativeIntrinsicLogicalWidth):
* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::hasRelativeIntrinsicLogicalWidth):
Add a way to check if the logicalWidth is relative so that we only check
the width in computePreferredLogicalWidths instead of also checking the height.

* rendering/svg/RenderSVGRoot.h:

LayoutTests:

* fast/replaced/preferred-widths-expected.txt: Added.
* fast/replaced/preferred-widths.html: Added.
These results match Gecko and Opera except for the 3rd container div.
Talking to dbaron and bz and Mozilla they sound likely to match our behavior there.
See https://bugzilla.mozilla.org/show_bug.cgi?id=823483 for example.

The width of the containers is wrong in some of these cases because our
computePreferredLogicalWidths methods don't currently account for
intrinsic sizes (e.g. min-content, max-content, etc).

* platform/chromium-linux/fast/replaced/width100percent-image-expected.png:
* platform/chromium-linux/tables/mozilla_expected_failures/bugs/bug85016-expected.png:
* platform/chromium-win/fast/replaced/width100percent-image-expected.txt:
* platform/chromium-win/tables/mozilla_expected_failures/bugs/bug85016-expected.txt:
These new results are more correct. The width100percent-image case now
matches other browsers and is due to not setting the minPreferrredLogicalWidth to
0 if the height is a percentage. The bugs85016 case is different because we
now correctly add the border and padding width to the preferred width of the image.


Canonical link: https://commits.webkit.org/128146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142931 268f45cc-cd09-0410-ab3c-d52691b4dbfc