Source/WebCore/rendering/svg/RenderSVGRoot.cpp
@@ -469,6 +469,13 @@ bool RenderSVGRoot::hasRelativeDimensions() const
     return svg->intrinsicHeight(SVGSVGElement::IgnoreCSSProperties).isPercent() || svg->intrinsicWidth(SVGSVGElement::IgnoreCSSProperties).isPercent();
 }
 
+bool RenderSVGRoot::hasRelativeIntrinsicLogicalWidth() const
+{
+    SVGSVGElement* svg = static_cast<SVGSVGElement*>(node());
+    ASSERT(svg);
+    return svg->intrinsicWidth(SVGSVGElement::IgnoreCSSProperties).isPercent();
+}
+
 bool RenderSVGRoot::hasRelativeLogicalHeight() const
 {
     SVGSVGElement* svg = static_cast<SVGSVGElement*>(node());
